fixed header spacing

--- a/client/src/components/Header.module.css
+++ b/client/src/components/Header.module.css
@@ -50,7 +50,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 40%;
+    width: 30%;
     padding: 10px;
     margin-left: auto;
 }
